tests/functional/test_scoping/interface_model1/model_b/app_error2.if
import "base.if"
import "types.if"
import "file_not_found.if" // error

package app {
    interface app1 {
        -> base.inout_sockets s;
        types.int userid;
    }
}
